# rdpal

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md
src/: compression.rs  cpio.rs  extract.rs  info.rs  lib.rs  main.rs  segment.rs  update.rs
tests/: devices.rs  ownership.rs  root_flag.rs
