[package]
name = "rdpal"
version = "0.3.2"
description = "A tool to manipulate Linux initrd files"
homepage = "https://thistle.tech"
repository = "https://github.com/thistletech/rdpal"
keywords = ["linux", "initrd", "cpio"]
categories = ["command-line-utilities", "development-tools::build-utils", "filesystem"]
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
bzip2 = "0.5"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
walkdir = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
